syntax = "proto3";
option csharp_namespace = "StockService";
package stock;

service Stock {
  rpc GetAllProducts(VoidRequest) returns (stream StockServiceProductModel);
  rpc CreateProduct(StockServiceProductModel) returns (StockServiceResponse);
  rpc UpdateProduct(StockServiceProductModel) returns (StockServiceResponse);
  rpc DeleteProduct(StockServiceProductId) returns (StockServiceResponse);
  rpc ReserveProduct(stream StockServiceReserveProduct) returns (StockServiceResponse);
}

message VoidRequest {

}

message StockServiceProductModel {
	string id = 1;
	string name = 2;
	int32 quantity = 3;
	int32 reservedQuantity = 4;
}

message StockServiceProductId {
	string id = 1;
}

message StockServiceReserveProduct {
	string id = 1;
	int32 quantity = 2;
}

message StockServiceResponse {
	bool success = 1;
	string message = 2;
}